# hycoclip

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: eval_hierarchical_metrics.py  eval_zero_shot_classification.py  eval_zero_shot_retrieval.py  train_clip_vit_b.py  train_clip_vit_l.py  train_clip_vit_s.py  train_hycoclip_vit_l.py  train_meru_vit_b.py  train_meru_vit_l.py  train_meru_vit_s.py
hycoclip/: config.py  lorentz.py  models.py  optim.py
hycoclip/data/: evaluation.py  webdataset_mapper.py
hycoclip/encoders/: image_encoders.py
hycoclip/evaluation/: catalog.py  class_names.py  classification.py  hierarchical_metrics.py  retrieval.py
hycoclip/utils/: checkpointing.py
scripts/: evaluate.py  interpolating_points.py  save_embeddings.py  spatial_norm_dist.py  train.py  visualize_radius_dist.py
utils/: prepare_GRIT_webdataset.py
