[project]
name = "hycoclip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch==2.4.0+cu118; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torch==2.4.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    "torchvision==0.19.0+cu118; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "torchvision==0.19.0; sys_platform == 'darwin' or (sys_platform == 'linux' and platform_machine == 'aarch64')",
    'absl-py==2.2.2',
    'array-record==0.5.1',
    'etils==1.5.2',
    'importlib-resources==6.5.2',
    'zipp==3.21.0',
    "ftfy>=6.0",
    "future==0.18.0",
    "hydra-core>=1.1",
    "loguru>=0.6",
    "nltk>=3.6",
    "scikit-learn>=1.0",
    "tensorboard==2.14.0",
    "tensorflow-datasets>=4.9.0",
    "torchmetrics>=1.0",
    "tqdm>=4.50.0",
    "ujson>=5.0",
    "webdataset>=0.2",
    "wordsegment>=1.3",
    "wget>=3.2",
    "boto3>=1.34.25",
    "opencv-python>=4.9.0.80",
    "albumentations==1.4.1",
    "numpy==1.26.2",
    "pyparsing==3.1.2",
    "tensorflow>=2.14.1",
    "tfds-nightly>=4.9.3.dev202311230044",
    "pandas>=2.2.3",
    "gdown>=5.2.0",
    "seaborn>=0.13.2",
    "pip>=25.1.1",
    "hf-xet>=1.1.0",
    "huggingface-hub>=0.31.1",
    "safetensors>=0.5.3",
    "timm>=1.0.15",
]

[tool.uv]
find-links = [
    "https://download.pytorch.org/whl/cu118/torch",
    "https://download.pytorch.org/whl/cu118/torchvision",
]
